# FinalYearProject

./: .gitignore  FYP  FYP.pub  Makefile  README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/.private/robot_driver_unity/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/ros_tcp_endpoint/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/sl_ctrl/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/sl_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/sl_visn/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/uni_lace/: .catkin
catkin_ws/devel/.private/uni_lace_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/yumi_description/: .catkin  .rosinstall  (+2 more)
catkin_ws/src/ROSLLM/yumi_ctrl/: CMakeLists.txt  package.xml
catkin_ws/src/ROSLLM/yumi_ctrl/config/: rosconsole.conf
catkin_ws/src/ROSLLM/yumi_ctrl/launch/: ctrl_node.launch  dlo.launch  yumi.launch
catkin_ws/src/ROSLLM/yumi_ctrl/params/: dynamic_params.yaml  scene_dynamic_params.yaml  scene_static_params.yaml  static_params.yaml
catkin_ws/src/ROSLLM/yumi_ctrl/results/: DUMP.TXT  scene_params.yaml
catkin_ws/src/ROSLLM/yumi_ctrl/scripts/: ctrl_node.py  ctrl_primitives  scene_ctrl.py  scene_logger.py  scene_params  scene_params.py  utils  utils.py  yumi_ctrl.py  yumi_wrapper.py
catkin_ws/src/ROSLLM/yumi_vsn/: CMakeLists.txt  package.xml
catkin_ws/src/ROSLLM/yumi_vsn/config/: params_real.yaml
catkin_ws/src/ROSLLM/yumi_vsn/launch/: yumi_vsn.launch
catkin_ws/src/ROSLLM/yumi_vsn/results/: output.txt
catkin_ws/src/ROSLLM/yumi_vsn/scripts/: colour_tuner.py  dlo_vsn_coloured.py  dlo_vsn_node.py  platform_registration.py
catkin_ws/src/ROSLLM/yumi_vsn/scripts/utils/: colour_segmentation.py  images.py  point_clouds.py  yumi_camera.py
catkin_ws/src/ROSLLM/yumi_vsn/utils/: colour_segmentation.py  yumi_camera.py
ros_compvis/log/: latest_build  latest_list
ros_compvis/src/comp_vis/: package.xml  setup.cfg  setup.py
ros_open_cv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_open_cv/install/open_cv/share/open_cv/: package.bash  package.sh  package.xml  package.zsh
ros_open_cv/log/: latest_build
ros_open_cv/src/open_cv/: setup.py
user_gym_policy/: redirect.out
(+283 files in other folders)
