<?xml version="1.0"?>
<package format="2">
    <name>yumi_ctrl</name>
    <version>1.0.0</version>
    <description>yumi_ctrl package</description>
    <maintainer email="mn821@ic.ac.uk">Martin Nguyen</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

</package>