<?xml version="1.0"?>
<package format="2">
    <name>yumi_vsn</name>
    <version>1.0.0</version>
    <description>yumi_vsn package</description>
    
    <maintainer email="mn821@ic.ac.uk">Martin Nguyen</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>ros_numpy</depend>
</package>
