<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_cv</name>
  <version>0.0.0</version>
  <description>ROS 2 package for OpenCV integration and real-time object detection/segmentation</description>
  <maintainer email="martin_ngn@todo.todo">martin_ngn</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS 2 dependencies -->
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- External dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>transformers</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>ament_lint_auto</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
